Hotfix. Fixes iconic nav spacing problem

--- a/_sass/blocks/jekyll-layouts/_state-pages.scss
+++ b/_sass/blocks/jekyll-layouts/_state-pages.scss
@@ -22,7 +22,7 @@
     padding-bottom: $standard-padding-lite;
   }
 
-  h3:not(.chart-title):not(.title-land-ownership) {
+  h3:not(.chart-title):not(.title-land-ownership):not(.state-page-nav-title) {
     padding-top: 4rem;
   }
 
