--- a/_sass/blocks/state-pages/_iconic-nav.scss
+++ b/_sass/blocks/state-pages/_iconic-nav.scss
@@ -5,7 +5,7 @@
   border-bottom: 1px solid $mid-gray;
   display: flex;
   justify-content: flex-start;
-  margin: 0;
+  margin: 4rem 0 0 0;
   position: relative;
 
   svg.map {
